--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,21 @@
   list-style: none;
   text-decoration: none;
 }
+.homePic {
+  height: 100%;
+  width: 100%;
+  justify-self: auto;
+}
+.spacer {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.bgColor {
+  background-color: rgb(0, 0, 0);
+}
+.bgColor1 {
+  background-color: rgb(10, 17, 27);
+}
+.rounded {
+  border-radius: 10px;
+}
