--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,22 @@
   padding-bottom: 50px;
 }
 .bgColor {
-  background-color: rgb(0, 0, 0);
-}
-.bgColor1 {
   background-color: rgb(10, 17, 27);
 }
+.bgColor1 {
+  background-color: rgb(100, 170, 207);
+}
+.bgColor2 {
+  background-color: black;
+  border: rgb(100, 170, 207);
+}
 .rounded {
-  border-radius: 10px;
+  border-radius: 15px 50px 30px 5px;
+}
+.font {
+  font-family: "Montserrat", sans-serif;
+}
+.navSpacer {
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
